--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="aula_5.1_swich.js"></script>
     <script src="aula_5_condicionais.js"></script>
     <script src="aula_6_operadores_logicos.js"></script>
+    <script src="aula_7_op_ternario.js"></script>
 
 </body>
 </html>
