estrutura de repeticao, timeout e intervalo

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="aula_5_condicionais.js"></script>
     <script src="aula_6_operadores_logicos.js"></script>
     <script src="aula_7_op_ternario.js"></script>
+    <script src="aula_10_intervalo_timeout.js"></script>
 
 </body>
 </html>
