condicionais e for ... of

--- a/exercicios/index.html
+++ b/exercicios/index.html
@@ -10,6 +10,7 @@
     <script src="./exe_01.js"></script>
     <script src="./exe_02.js"></script>
     <script src="./exe_03.js"></script>
-
+    <script src="./exe_04.js"></script>
+    <script src="./exe_05.js"></script>
 </body>
 </html>
