--- a/exercicios/index.html
+++ b/exercicios/index.html
@@ -12,5 +12,6 @@
     <script src="./exe_03.js"></script>
     <script src="./exe_04.js"></script>
     <script src="./exe_05.js"></script>
+    <script src="./exe_06.js"></script>
 </body>
 </html>
