criando elementos com javascript

--- a/manipulando_dom/index.html
+++ b/manipulando_dom/index.html
@@ -17,8 +17,10 @@
 
     <div id="opcao">
         <button class="botao">Exibir alert</button>
+        
     </div>
     <script src="./01_event_inline.js"></script>
     <script src="./02_trabalhando_DOM.js"></script>
+    <script src="./03_adicionando_elementos.js"></script>
 </body>
 </html>
