style com javascript

--- a/manipulando_dom/index.html
+++ b/manipulando_dom/index.html
@@ -19,8 +19,13 @@
         <button class="botao">Exibir alert</button>
         
     </div>
+
+
+    <div class="boxe"></div>
+
     <script src="./01_event_inline.js"></script>
     <script src="./02_trabalhando_DOM.js"></script>
     <script src="./03_adicionando_elementos.js"></script>
+    <script src="./04_style_javascript.js"></script>
 </body>
 </html>
