--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="promisses.js"></script>
 </body>
 </html>
